--- a/lab_group/lab_group/lab_group.vcxproj
+++ b/lab_group/lab_group/lab_group.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClInclude Include="Common.h" />
     <ClInclude Include="Groups.h" />
+    <ClInclude Include="PrivateMethodGroups.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Student.h" />
@@ -154,6 +155,7 @@
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="Groups.cpp" />
     <ClCompile Include="lab_group.cpp" />
+    <ClCompile Include="PrivateMethodGroups.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
