--- a/lab_group/lab_group/lab_group.vcxproj.filters
+++ b/lab_group/lab_group/lab_group.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="PrivateMethodGroups.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="PrivateMethodStudent.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
@@ -62,6 +65,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="PrivateMethodGroups.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="PrivateMethodStudent.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
