--- a/lab_group/lab_group/lab_group.vcxproj.filters
+++ b/lab_group/lab_group/lab_group.vcxproj.filters
@@ -27,16 +27,13 @@
     <ClInclude Include="Student.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="Groups.h">
+    <ClInclude Include="ForStudent.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="Common.h">
+    <ClInclude Include="GroupStudents.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="PrivateMethodGroups.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="PrivateMethodStudent.h">
+    <ClInclude Include="ForGroup.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
@@ -58,16 +55,13 @@
     <ClCompile Include="Student.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="Groups.cpp">
+    <ClCompile Include="ForStudent.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="Common.cpp">
+    <ClCompile Include="GroupStudents.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="PrivateMethodGroups.cpp">
-      <Filter>Файлы исходного кода</Filter>
-    </ClCompile>
-    <ClCompile Include="PrivateMethodStudent.cpp">
+    <ClCompile Include="ForGroup.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
